--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "hi",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "bootstrap/index.js",
   "scripts": {
     "test": "electron ."
   },
@@ -11,5 +11,8 @@
   "license": "ISC",
   "devDependencies": {
     "electron": "^11.1.1"
+  },
+  "dependencies": {
+    "bootstrap": "^4.5.3"
   }
 }
